--- a/wkQuiz/ihm-quizz/src/ihm/EditerCategorie.fxml
+++ b/wkQuiz/ihm-quizz/src/ihm/EditerCategorie.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -21,22 +22,32 @@
             <Font name="Open Sans Regular" size="32.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="534.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Éditer une Catégorie  ">
+      <Text fill="WHITE" layoutX="538.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Éditer une Catégorie  ">
          <font>
-            <Font size="40.0" />
+            <Font name="Open Sans Regular" size="40.0" />
          </font>
       </Text>
-      <ScrollPane layoutX="25.0" layoutY="180.0" prefHeight="560.0" prefWidth="1330.0">
+      <ScrollPane layoutX="80.0" layoutY="280.0" prefHeight="471.0" prefWidth="1290.0">
          <content>
-            <TableView prefHeight="558.0" prefWidth="1313.0">
+            <TableView prefHeight="466.0" prefWidth="1274.0">
               <columns>
-                <TableColumn prefWidth="461.0" text="Nom" />
-                <TableColumn minWidth="0.0" prefWidth="415.0" text="Nombre de question de la catégorie" />
-                  <TableColumn maxWidth="205.0" minWidth="145.0" prefWidth="205.0" text="Modifier" />
-                  <TableColumn maxWidth="231.0" minWidth="180.0" prefWidth="231.0" text="Supprimer" />
+                <TableColumn prefWidth="404.0" text="Nom de la Catégorie" />
+                <TableColumn minWidth="0.0" prefWidth="426.0" text="Nombre de question de la catégorie" />
+                  <TableColumn maxWidth="263.0" minWidth="132.0" prefWidth="179.0" text="Modifier la Catégorie" />
+                  <TableColumn maxWidth="350.0" minWidth="180.0" prefWidth="264.0" text="Supprimer la Catégorie" />
               </columns>
             </TableView>
          </content>
       </ScrollPane>
+      <Text fill="WHITE" layoutX="84.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la catégorie">
+         <font>
+            <Font name="Open Sans Regular" size="24.0" />
+         </font>
+      </Text>
+      <TextField layoutX="83.0" layoutY="206.0" prefHeight="52.0" prefWidth="445.0" promptText="Nom de la question" style="-fx-background-radius: 20px;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
    </children>
 </Pane>
