--- a/wkQuiz/ihm-quizz/src/ihm/EditerCategorie.fxml
+++ b/wkQuiz/ihm-quizz/src/ihm/EditerCategorie.fxml
@@ -31,20 +31,20 @@
          <content>
             <TableView prefHeight="466.0" prefWidth="1274.0">
               <columns>
-                <TableColumn prefWidth="404.0" text="Nom de la Catégorie" />
-                <TableColumn minWidth="0.0" prefWidth="426.0" text="Nombre de question de la catégorie" />
-                  <TableColumn maxWidth="263.0" minWidth="132.0" prefWidth="179.0" text="Modifier la Catégorie" />
-                  <TableColumn maxWidth="350.0" minWidth="180.0" prefWidth="264.0" text="Supprimer la Catégorie" />
+                <TableColumn prefWidth="404.0" resizable="false" text="Nom de la Catégorie" />
+                <TableColumn minWidth="0.0" prefWidth="426.0" resizable="false" text="Nombre de questions de la catégorie" />
+                  <TableColumn maxWidth="263.0" minWidth="132.0" prefWidth="179.0" resizable="false" text="Modifier la Catégorie" />
+                  <TableColumn maxWidth="350.0" minWidth="180.0" prefWidth="264.0" resizable="false" text="Supprimer la Catégorie" />
               </columns>
             </TableView>
          </content>
       </ScrollPane>
-      <Text fill="WHITE" layoutX="84.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la catégorie">
+      <Text fill="WHITE" layoutX="84.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la Catégorie :">
          <font>
             <Font name="Open Sans Regular" size="24.0" />
          </font>
       </Text>
-      <TextField layoutX="83.0" layoutY="206.0" prefHeight="52.0" prefWidth="445.0" promptText="Nom de la question" style="-fx-background-radius: 20px;">
+      <TextField layoutX="83.0" layoutY="206.0" prefHeight="52.0" prefWidth="445.0" promptText="Nom de la Catégorie" style="-fx-background-radius: 20px;">
          <font>
             <Font size="20.0" />
          </font>
