--- a/wkQuiz/ihm-quizz/src/application/vue/CreationCategorie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/CreationCategorie.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -8,15 +13,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="96.0" fitWidth="96.0" layoutX="32.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../Images/IconsRetour.png" />
          </image>
       </ImageView>
-      <Label layoutX="238.0" layoutY="60.0" prefHeight="57.0" prefWidth="583.0" text="Création d'une catégorie" textFill="WHITE">
+      <Label layoutX="285.0" layoutY="58.0" prefHeight="57.0" prefWidth="583.0" text="Création d'une catégorie" textFill="WHITE">
          <font>
             <Font size="40.0" />
          </font>
@@ -31,7 +35,7 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <Button layoutX="195.0" layoutY="453.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="277.06" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Annuler" textFill="WHITE">
+      <Button layoutX="174.0" layoutY="453.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="277.06" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Annuler" textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
