--- a/wkQuiz/ihm-quizz/src/application/vue/EditerCategorie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerCategorie.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -10,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="RetourBouton" fitHeight="96.0" fitWidth="96.0" layoutX="32.0" layoutY="20.0">
          <image>
@@ -31,10 +36,10 @@
          <content>
             <TableView prefHeight="466.0" prefWidth="1274.0">
               <columns>
-                <TableColumn prefWidth="404.0" resizable="false" text="Nom de la Catégorie" />
-                <TableColumn minWidth="0.0" prefWidth="426.0" resizable="false" text="Nombre de questions de la catégorie" />
-                  <TableColumn maxWidth="263.0" minWidth="132.0" prefWidth="179.0" resizable="false" text="Modifier la Catégorie" />
-                  <TableColumn maxWidth="350.0" minWidth="180.0" prefWidth="264.0" resizable="false" text="Supprimer la Catégorie" />
+                <TableColumn editable="false" prefWidth="404.0" resizable="false" text="Nom de la Catégorie" />
+                <TableColumn editable="false" minWidth="0.0" prefWidth="426.0" resizable="false" text="Nombre de questions de la catégorie" />
+                  <TableColumn editable="false" maxWidth="263.0" minWidth="132.0" prefWidth="179.0" resizable="false" sortable="false" text="Modifier la Catégorie" />
+                  <TableColumn editable="false" maxWidth="350.0" minWidth="180.0" prefWidth="264.0" resizable="false" sortable="false" text="Supprimer la Catégorie" />
               </columns>
             </TableView>
          </content>
@@ -49,5 +54,17 @@
             <Font size="20.0" />
          </font>
       </TextField>
+      <Button fx:id="CreerQuestionBouton" layoutX="1020.0" layoutY="38.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Créer une Catégorie" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="64.0" fitWidth="64.0" styleClass="cavajamaismarcher">
+               <image>
+                  <Image url="@../../../../images/icons8-plus-96%201.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </Pane>
