--- a/wkQuiz/ihm-quizz/src/application/vue/Editeur.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Editeur.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -7,8 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="AcceuilBouton" fitHeight="96.0" fitWidth="96.0" layoutX="32.0" layoutY="20.0">
          <image>
@@ -20,12 +24,12 @@
             <Font name="Open Sans Regular" size="32.0" />
          </font>
       </Text>
-      <ImageView fitHeight="290.0" fitWidth="4.0" layoutX="500.0" layoutY="266.0">
+      <ImageView fitHeight="290.0" fitWidth="4.0" layoutX="506.0" layoutY="264.0">
          <image>
             <Image url="@../../../../images/Connector%20line.png" />
          </image>
       </ImageView>
-      <Button fx:id="CreerQuestionBouton" layoutX="52.0" layoutY="296.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Créer une Question" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="CreerQuestionBouton" layoutX="64.0" layoutY="296.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Créer une Question" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -37,7 +41,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="CreerCategorieBouton" layoutX="50.0" layoutY="427.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Créer une Catégorie" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="CreerCategorieBouton" layoutX="64.0" layoutY="427.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Créer une Catégorie" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -73,7 +77,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="BoutonImporter" layoutX="306.0" layoutY="128.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Importer Des Questions" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="BoutonImporter" layoutX="324.0" layoutY="127.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Importer Des Questions" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -85,7 +89,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Text fill="WHITE" layoutX="289.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Éditeur de questions" textAlignment="CENTER">
+      <Text fill="WHITE" layoutX="327.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Éditeur de questions" textAlignment="CENTER">
          <font>
             <Font name="Open Sans Regular" size="40.0" />
          </font>
