--- a/wkQuiz/ihm-quizz/src/application/vue/Acceuil.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Acceuil.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -12,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label contentDisplay="CENTER" layoutX="907.0" layoutY="102.0" prefHeight="57.0" prefWidth="64.0" text="Aide" textFill="WHITE">
          <font>
@@ -21,7 +16,7 @@
       </Label>
       <ImageView fitHeight="96.0" fitWidth="96.0" layoutX="890.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../Images/IconeAide.png" />
+            <Image url="@../../images/IconeAide.png" />
          </image>
       </ImageView>
       <Label contentDisplay="CENTER" layoutX="412.0" layoutY="58.0" prefHeight="57.0" prefWidth="243.0" text="Quiz Java " textAlignment="CENTER" textFill="WHITE">
@@ -31,7 +26,7 @@
       </Label>
       <ImageView fitHeight="96.0" fitWidth="96.0" layoutX="32.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../Images/IconeQuitter.png" />
+            <Image url="@../../images/IconeQuitter.png" />
          </image>
       </ImageView>
       <Label contentDisplay="CENTER" layoutX="35.0" layoutY="102.0" prefHeight="57.0" prefWidth="128.0" text="Quitter" textFill="WHITE">
@@ -44,9 +39,9 @@
             <Font size="32.0" />
          </font>
          <graphic>
-            <ImageView fitHeight="64.0" fitWidth="63.49" layoutX="397.68" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="64.0" fitWidth="64.0" layoutX="397.68" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Images/Jouer.png" />
+                  <Image url="@../../images/IconeJouer.png" />
                </image>
             </ImageView>
          </graphic>
@@ -56,9 +51,9 @@
             <Font size="32.0" />
          </font>
          <graphic>
-            <ImageView fitHeight="64.0" fitWidth="64.14" layoutX="289.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="64.0" fitWidth="64.0" layoutX="289.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Images/EditionLogo.png" />
+                  <Image url="@../../images/IconeEdition.png" />
                </image>
             </ImageView>
          </graphic>
@@ -68,9 +63,9 @@
             <Font size="32.0" />
          </font>
          <graphic>
-            <ImageView fitHeight="56.71" fitWidth="64.0" layoutX="333.0" layoutY="465.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="64.0" fitWidth="64.0" layoutX="333.0" layoutY="465.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Images/EnligneIcon.png" />
+                  <Image url="@../../images/IconEnligne.png" />
                </image>
             </ImageView>
          </graphic>
