--- a/wkQuiz/ihm-quizz/src/application/vue/CreationQuestionetCategorie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/CreationQuestionetCategorie.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -16,8 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<TabPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <tabs>
       <Tab closable="false" text="Création Question">
          <content>
@@ -85,7 +81,7 @@
                                  <graphic>
                                     <ImageView fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../../../../../Images/IconsMultiplier.png" />
+                                          <Image url="@../../images/IconeAnnuler.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
@@ -97,7 +93,7 @@
                                  <graphic>
                                     <ImageView fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../../../../../Images/IconsSelect.png" />
+                                          <Image url="@../../images/IconeValider.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
@@ -113,7 +109,7 @@
                   </Label>
                   <ImageView fitHeight="96.0" fitWidth="96.0" layoutX="32.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../Images/IconsRetour.png" />
+                        <Image url="@../../images/IconeRetour.png" />
                      </image>
                   </ImageView>
                   <Label layoutX="32.0" layoutY="96.0" prefHeight="57.0" prefWidth="128.0" text="Retour" textFill="WHITE">
@@ -133,7 +129,7 @@
                      <children>
                         <ImageView fitHeight="96.0" fitWidth="96.0" layoutX="32.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../Images/IconsRetour.png" />
+                              <Image url="@../../images/IconeRetour.png" />
                            </image>
                         </ImageView>
                         <Label layoutX="285.0" layoutY="58.0" prefHeight="57.0" prefWidth="583.0" text="Création d'une catégorie" textFill="WHITE">
@@ -158,7 +154,7 @@
                            <graphic>
                               <ImageView fitHeight="64.0" fitWidth="64.0" layoutX="222.0" layoutY="463.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../../Images/IconsMultiplier.png" />
+                                    <Image url="@../../images/IconeAnnuler.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -170,7 +166,7 @@
                            <graphic>
                               <ImageView fitHeight="64.0" fitWidth="64.0" layoutX="633.0" layoutY="461.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../../Images/IconsSelect.png" />
+                                    <Image url="@../../images/IconeValider.png" />
                                  </image>
                               </ImageView>
                            </graphic>
