--- a/wkQuiz/ihm-quizz/src/application/vue/EditerQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerQuestion.fxml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -16,11 +12,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="RetourBouton" fitHeight="96.0" fitWidth="96.0" layoutX="32.0" layoutY="20.0">
          <image>
-            <Image url="@../../../../images/icons8-retour-96%201.png" />
+            <Image url="@../../images/IconeRetour.png" />
          </image>
       </ImageView>
       <Text fill="WHITE" layoutX="29.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retour">
@@ -95,7 +91,7 @@
          <graphic>
             <ImageView fitHeight="64.0" fitWidth="64.0" styleClass="cavajamaismarcher">
                <image>
-                  <Image url="@../../../../images/icons8-plus-96%201.png" />
+                  <Image url="@../../images/IconeCreer.png" />
                </image>
             </ImageView>
          </graphic>
