--- a/wkQuiz/ihm-quizz/src/application/vue/Editeur.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Editeur.fxml
@@ -11,7 +11,7 @@
    <children>
       <ImageView fx:id="AcceuilBouton" fitHeight="96.0" fitWidth="96.0" layoutX="32.0" layoutY="20.0">
          <image>
-            <Image url="@../../images/IconeAcceuil.png" />
+            <Image url="@images/IconeAcceuil.png" />
          </image>
       </ImageView>
       <Text fill="WHITE" layoutX="26.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acceuil" textAlignment="CENTER">
@@ -21,53 +21,53 @@
       </Text>
       <ImageView fitHeight="290.0" fitWidth="4.0" layoutX="506.0" layoutY="264.0">
          <image>
-            <Image url="@../../../../images/Connector%20line.png" />
+            <Image url="@images/Connector%20line.png" />
          </image>
       </ImageView>
-      <Button fx:id="CreerCategorieBouton" layoutX="237.0" layoutY="247.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="510.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Créer une Catégorie ou Catégorie" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="CreerCategorieBouton" layoutX="237.0" layoutY="247.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="510.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/Editeur.css" text="Créer une Catégorie ou Catégorie" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
          <graphic>
             <ImageView fitHeight="64.0" fitWidth="64.0" styleClass="cavajamaismarcher">
                <image>
-                  <Image url="@../../images/IconeCreer.png" />
+                  <Image url="@images/IconeCreer.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="EditerQuestionBouton" layoutX="312.0" layoutY="393.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Éditer une Question" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="EditerQuestionBouton" layoutX="312.0" layoutY="393.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/Editeur.css" text="Éditer une Question" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
          <graphic>
             <ImageView fitHeight="64.0" fitWidth="64.0" styleClass="cavajamaismarcher">
                <image>
-                  <Image url="@../../images/IconeModifier.png" />
+                  <Image url="@images/IconeModifier.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="EditerCategorieBouton" layoutX="312.0" layoutY="492.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Éditer une Catégorie" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="EditerCategorieBouton" layoutX="312.0" layoutY="492.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/Editeur.css" text="Éditer une Catégorie" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
          <graphic>
             <ImageView fitHeight="64.0" fitWidth="64.0" styleClass="cavajamaismarcher">
                <image>
-                  <Image url="@../../images/IconeModifier.png" />
+                  <Image url="@images/IconeModifier.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="BoutonImporter" layoutX="324.0" layoutY="127.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@../css/Editeur.css" text="Importer Des Questions" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="BoutonImporter" layoutX="324.0" layoutY="127.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/Editeur.css" text="Importer Des Questions" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
          <graphic>
             <ImageView fitHeight="64.0" fitWidth="64.0" styleClass="cavajamaismarcher">
                <image>
-                  <Image url="@../../images/IconeImporter.png" />
+                  <Image url="@images/IconeImporter.png" />
                </image>
             </ImageView>
          </graphic>
@@ -79,7 +79,7 @@
       </Text>
       <ImageView fitHeight="380.0" fitWidth="70.0" layoutX="488.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
          <image>
-            <Image url="@../../images/Connector%20line.png" />
+            <Image url="@images/Connector%20line.png" />
          </image>
       </ImageView>
    </children>
